--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "spinkit": "^2.0.1",
     "vc-subscribe-publish": "^1.0.3",
     "vue": "^3.2.47",
+    "vue-draggable-plus": "^0.6.0",
     "vue-fabric": "^0.1.42",
     "vue-i18n": "11.0.0-rc.1",
     "vue-picture-cropper": "^0.7.0",
